package NYT.NChunkServer.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TChunkReincarnationOptions
{
    optional bool ignore_creation_time = 1;
    optional bool ignore_account_settings = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqUpdateChunkReincarnatorTransactions
{ }

message TReqCreateReincarnatedChunks
{
    message TSubrequest
    {
        required NYT.NProto.TGuid old_chunk_id = 1;
        optional TChunkReincarnationOptions options = 2;
    }

    repeated TSubrequest subrequests = 1;
    // COMPAT(kvk1920): Make this field `required` after 23.2.
    optional int64 config_version = 2;
}

message TReqReincarnateChunks
{
    message TSubrequest
    {
        required NYT.NProto.TGuid old_chunk_id = 1;
        required NYT.NProto.TGuid new_chunk_id = 2;
        optional TChunkReincarnationOptions options = 3;
    }

    repeated TSubrequest subrequests = 1;
    // COMPAT(kvk1920) Make this field `required`.
    optional int64 config_version = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqCheckExportedChunkReincarnation
{
    message TChunkInfo
    {
        required NYT.NProto.TGuid chunk_id = 1;
        required bool has_owning_tables = 2;
    }

    required int64 config_version = 1;
    repeated TChunkInfo chunks = 2;
    optional TChunkReincarnationOptions options = 3;
}

message TReqCheckForeignChunkReincarnation
{
    required int64 config_version = 1;
    repeated NYT.NProto.TGuid chunk_ids = 2;
    // NB: There is no need for chunk's native cell tag because it can be
    // deduced from chunk id.
}

message TReqOnExportedChunkReincarnationCheckFinished
{
    message TSubresponse
    {
        required NYT.NProto.TGuid chunk_id = 1;
        required int32 result = 2; // EReincarnationResult
        required bool has_owning_tables = 3;
    }

    required int64 config_version = 1;
    required uint32 foreign_cell_tag = 2;
    repeated TSubresponse subresponses = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TReqReincarnateForeignChunks
{
    message TSubrequest
    {
        required NYT.NProto.TGuid old_chunk_id = 1;
        required NYT.NProto.TGuid new_chunk_id = 2;
    }

    required NYT.NProto.TGuid transaction_id = 1;
    repeated TSubrequest subrequests = 2;
}

////////////////////////////////////////////////////////////////////////////////
